--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -184,7 +184,7 @@ li {
     }
 
     .menu-icon {
-        display: block;
+        display: none;
         cursor: pointer;
         color: white;
     }
